--- a/src/scss/mixinFontWeightSize.scss
+++ b/src/scss/mixinFontWeightSize.scss
@@ -1,12 +1,12 @@
 @import "./fontMaps.scss";
 
 // Programmatic font sizes eg text__bold--lg
-@mixin tailwindFonts() {
+@mixin tailwindFonts($separator:'__', $modifier:'--') {
     @each $name, $value in $fontWeights {
-      &__#{$name} {
+      &#{$separator}#{$name} {
         font-weight: $value;
         @each $fontname, $fontvalue in $fontSizes {
-          &--#{$fontname} {
+          &#{$modifier}#{$fontname} {
             font-weight: $value;
             font-size: $fontvalue;
           }
